--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
                     <picture>
                         <source srcset="images/team/igor-demynenko.jpg 1x,
                          images/team/igor-demynenko@2x.jpg 2x" 
-                        media="min-width: 1200px"/>
+                        media="(min-width=1200px)"/>
                         <source srcset="images/team/tabl-demynenko.jpg 1x, 
                         images/team/tabl-demynenko@2x.jpg 2x" 
-                        media="min-width: 768px"/>
+                        media="(min-width: 768px)"/>
                         <source srcset="mages/team/mobile-demynenko.jpg 1x,
                         images/team/mobile-demynenko@2x.jpg 2x" 
-                        media="min-width: 320px"/>
+                        media="(min-width: 320px)"/>
                         <img 
-                        src="images/team/mobile-demynenko.jpg" 
+                        src="./images/team/mobile-demynenko.jpg" 
                         alt="Фотопрортрет мужчини">
                     </picture>
                     
@@ -248,13 +248,13 @@
                     <picture>
                         <source srcset="images/team/olga-repina.jpg 1x,
                         images/team/olga-repina@2x.jpg 2x "
-                         media="min-width: 1200px"/>
+                         media="(min-width: 1200px)"/>
                         <source srcset="images/team/tabl-repina.jpg 1x
-                        images/tabl-repina@2x" 
-                        media="min-width: 768px"/>
+                        images/tabl-repina@2x.jpg 2x" 
+                        media="(min-width: 768px)"/>
                         <source srcset="images/team/mobile-repina.jpg 1x
                         images/team/mobile-repina@2x.jpg 2x" 
-                        media="min-width: 320px"/>
+                        media="(min-width: 320px)"/>
                         <img src="images/team/mobile-repina.jpg" 
                         alt="Фотопрортрет женщини">
                     </picture>                  
@@ -298,13 +298,13 @@
                     <picture>
                         <source srcset="images/team/nikolay-tarasov.jpg 1x
                         images/team/nikolay-tarasov@2x.jpg 2x" 
-                        media="min-width: 1200px"/>
+                        media="(min-width: 1200px)"/>
                         <source srcset="images/team/tabl-tarasov.jpg 1x
                         images/team/tabl-tarasov@2x.jpg 2x" 
-                        media="min-width: 738px"/>
+                        media="(min-width: 738px)"/>
                         <source srcset="images/team/mobile-tarasov.jpg 1x
                         images/team/mobile-tarasov@2x.jpg 2x" 
-                        media="min-width: 320px"/>
+                        media="(min-width: 320px)"/>
                         <img 
                         src="images/team/mobile-tarasov.jpg"
                         alt="Фотопрортрет мужчини"> 
@@ -348,14 +348,14 @@
                 <li class="team__employees-card">
                     <picture>
                         <source srcset="images/team/mikhail-ermakov.jpg 1x
-                        images/team/mikhail-ermakov@2z.jpg 2x" 
-                        media="min-width: 1200px"/>
+                        images/team/mikhail-ermakov@2x.jpg 2x" 
+                        media="(min-width: 1200px)"/>
                         <source srcset="images/team/tabl-ermakov.jpg 1x
                         images/team/tabl-ermakov@2x.jpg 2x" 
-                        media="min-width: 738px"/>
+                        media="(min-width: 738px)"/>
                         <source srcset="images/team/mobile-ermakov.jpg 1x 
                         images/team/mobile-ermakov@2x.jpg 2x" 
-                        media="min-width: 320px"/>
+                        media="(min-width: 320px)"/>
                         <img
                         src="images/team/mobile-ermakov.jpg" 
                         alt="Фотопрортрет мужчини">
